Adding links to footer via button.

--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -13,13 +13,24 @@
 <body>
   <script src="myscript.js"></script>
 
-  <p id="firstElement">First elements color was changed by a script!</p>
-  <button onclick="firstElement()">Change Color</button>
+  <p id="FirstElement">First elements color was changed by a script!</p>
+  <button onclick="FirstElement()">Change Color</button>
 
-  <p id="secondElement"></p>
-  <button onclick="secondElement()">Populate Text</button>
+  <p id="SecondElement"></p>
+  <button onclick="SecondElement()">Populate Text</button>
 
-  <p id="thirdElement">Third elements font and font size was changed by a script!</p>
-  <button onclick="thirdElement()">Populate Text</button>
+  <p id="ThirdElement">Third elements font and font size was changed by a script!</p>
+  <button onclick="ThirdElement()">Populate Text</button>
+
+  <br>
+  <br>
+  <br>
+  <button onclick="Footer()">Get latest news</button>
+
+
+  <br>
+  <br>
+  <br>
+  <footer id="Footer"></footer>
 </body>
 </html>
