Added name function

--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -17,13 +17,29 @@
   <button onclick="FirstElement()">Change Color</button>
 
   <p id="SecondElement"></p>
-  <button onclick="SecondElement()">Populate Text</button>
+  <button onclick="SecondElement()">Show Text</button>
 
   <p id="ThirdElement">Third elements font and font size was changed by a script!</p>
-  <button onclick="ThirdElement()">Populate Text</button>
+  <button onclick="ThirdElement()">Change Font Size and Font</button>
 
   <br>
   <br>
+  <p id="GetDate"></p>
+  <button onclick="Date()">See current date</button>
+  <br>
+  <br>
+
+      First name:<br>
+      <input type="text" name="firstname" id="FirstName"><br>
+      Last name:<br>
+      <input type="text" name="lastname" id="LastName">
+      <br>
+      <br>
+      <button onclick="Name()">Combined Name</button>
+      <br>
+      <p id="FullName"></p>
+
+
   <br>
   <button onclick="Footer()">Get latest news</button>
 
