--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -3,61 +3,54 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="StyleSheet.css">
 
-  <title>DN Lab2</title>
-  <meta name="description" content="Lab2 Assignment">
-  <meta name="author" content="SitePoint">
+    <title>DN Lab 2</title>
+    <meta name="description" content="Lab2 Assignment: About Cleveland">
+    <meta name="Daniel Norris" content="SitePoint">
 
 </head>
 
-<body id="Body">
-  <script src="myscript.js"></script>
+<body class="Body">
+    <header>
+        <h2 id="Title">Cleveland</h2>
+    </header>
+    <section>
+        <div class="Flex-Container">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="Places.html">Places</a>
+                <a href="History.html">History</a>
+                <a href="Lab2.html">Lab 2 Assignment</a>
+            </nav>
+        </div>
+    </section>
 
-  <h2>Task 1: Change 3 elemetns on the Page.</h2>
-  <hr>
-  <p id="FirstElement">First elements color was changed by a script!</p>
-  <button onclick="FirstElement()">Change Color</button>
+    <article id="Corners">
+        <h1>Cleveland</h1>
+        <div>
+            <p>A guy named Moses Cleaveland, a surveyor from Connecticut, ventured west along Lake Erie many years ago and
+                eventually landed in a forested area with the Cuyahoga River on one side and Lake Erie on another.</p>
+            <p> He thought, “Yes, this would make a great place for a city!” And so, in 1796, Cleveland was officially born.
+                (The “a” disappeared later.)</p>
+        </div>
+        <br>
 
-  <p id="SecondElement"></p>
-  <button onclick="SecondElement()">Show Text</button>
+        <h1>Cleveland in a Nutshell</h1>
+        <div>
+            <p>Cleveland is a major city in Ohio on the shores of Lake Erie. Landmarks dating to its days as a turn-of-the-20th-century
+                manufacturing center include the Steamship William G. Mather,</p>
+            <p>now part of the Great Lakes Science Center. It's also known for the stately Cleveland Museum of Art, the Cleveland
+                Orchestra, and the I.M. Pei–designed Rock and Roll Hall of Fame & Museum.</p>
+        </div>
+    </article>
 
-  <p id="ThirdElement">Third elements font and font size was changed by a script!</p>
-  <button onclick="ThirdElement()">Change Font Size and Font</button>
-  <br>
-  <br>
-
-  <h2>Task 2: Create an array that folds 3 news links and place them in the footer.</h2>
-  <hr>
-  <button onclick="Footer()">Get latest news</button>
-  <br>
-  <br>
-
-
-  <h2>Task 3: Create 3 additional changes of our choice</h2>
-  <hr>
-
-  <button onclick="Body()">Change the Background Color</button>
-  <br>
-  <br> First name:<br>
-  <input type="text" name="firstname" id="FirstName"><br> Last name:<br>
-  <input type="text" name="lastname" id="LastName">
-  <br>
-  <br>
-
-  <button onclick="Name()">Combined Name</button>
-  <br>
-  <p id="FullName"></p>
-  <br>
-
-  <button onclick="Reload()">Reset Page</button>
-  <br>
-  <br>
-  <br>
-
-  <h2>Footer</h2>
-  <hr>
-  <footer id="Footer"></footer>
+    <hr>
+    <footer id="Footer">
+        <p>Cleveland: Founded in 1796</p>
+        <p>Mayor: Frank G. Jackson</p>
+    </footer>
 </body>
 
 </html>
