Learning JSON Completed

--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -27,7 +27,7 @@
             </nav>
         </div>
     </section>
-    
+
 
     <h2>Task 1: Change 3 elemetns on the Page.</h2>
     <hr>
@@ -55,7 +55,8 @@
     <button onclick="PopulateName()">Automatically Populate a Name</button>
     <br>
     <br> First name:<br>
-    <input type="text" name="firstname" id="FirstName"><br> Last name:<br>
+    <input type="text" name="firstname" id="FirstName">
+    <br> Last name:<br>
     <input type="text" name="lastname" id="LastName">
     <br>
     <br>
