--- a/Lab12/Rockhall.html
+++ b/Lab12/Rockhall.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="StyleSheet.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>DN Lab1</title>
     <meta name="description" content="Lab1 Assignment: About Cleveland">
@@ -17,15 +17,17 @@
     <header>
         <h2 id="Title">Cleveland: Rock and Roll Hall of Fame</h2>
     </header>
-    <section>
-        <div class="Flex-Container">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="Places.html">Places</a>
-                <a href="History.html">History</a>
-            </nav>
-        </div>
-    </section>
+    <article>
+        <section>
+            <div class="Flex-Container">
+                <nav>
+                    <li class="col"><a href="index.html">Home</a></li>
+                    <li class="col"><a href="Places.html">Places</a></li>
+                    <li class="col"><a href="History.html">History</a></li>
+                </nav>
+            </div>
+        </section>
+    </article>
 
     <article id="Corners">
         <section>
