--- a/Lab12/Places.HTML
+++ b/Lab12/Places.HTML
@@ -16,17 +16,18 @@
 <body class="Body">
     <header>
         <h2 id="Title">A Quick Guide to Cleveland</h2>
+        <p></p>
     </header>
     <article>
-        <section>
-            <div class="Flex-Container">
-                <nav>
-                    <li class="col"><a href="index.html">Home</a></li>
-                    <li class="col"><a href="Places.html">Places</a></li>
-                    <li class="col"><a href="History.html">History</a></li>
-                </nav>
-            </div>
-        </section>
+            <section>
+                    <div class="Flex-Container">
+                        <nav>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="Places.html">Places</a></li>
+                            <li><a href="History.html">History</a></li>
+                        </nav>
+                    </div>
+                </section>
     </article>
 
     <article id="Corners">
